--- a/rick-morty-app/www/index.html
+++ b/rick-morty-app/www/index.html
@@ -2,24 +2,34 @@
 <html>
     <head>
         <meta charset="utf-8">
+
+        <!--default cordova-->
         <meta name="format-detection" content="telephone=no">
         <meta name="msapplication-tap-highlight" content="no">
         <meta name="viewport" content="initial-scale=1, width=device-width, viewport-fit=cover">
         <meta name="color-scheme" content="light dark">
-        <link rel="stylesheet" href="css/index.css">
-        <script type="text/javascript" src="controller.js"/>
-        <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"/>
+
         <title>Hello World</title>
+
+        <!-- materialize -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+        <link rel="stylesheet" href="css/index.css">
+        <script type="text/javascript" src="controller.js" />
+        <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js" />
+
     </head>
     <body>
-        <div class="app">
-            <h1>Apache Cordova</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
+
+        <div></div> <!--menu-->
+
+        <div id="container"> <!--input + cards-->
+
         </div>
-        <script src="cordova.js"></script>
-        <script src="js/index.js"></script>
+
+        <div></div> <!--pagination buttons-->
+
+
     </body>
 </html>
